# gazelle_issue_2022_dep

./: MODULE.bazel  go.mod
cmd/: BUILD.bazel  main.go
lib/: BUILD.bazel  lib.go
